# PyAudioGrabber

./: .gitignore  README.md  app-specs.md  concepto.md  pyproject.toml
src/grabber/: __init__.py  __main__.py  capture.py  cli.py  permissions.py  process.py  writer.py
