[project]
name = "grabber"
version = "0.1.0"
description = "CLI tool to capture audio from web browsers on macOS using ScreenCaptureKit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyobjc-framework-ScreenCaptureKit>=10.0",
    "pyobjc-framework-AVFoundation>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-CoreMedia>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "soundfile>=0.12.1",
]

[project.scripts]
grabber = "grabber.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grabber"]


